--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url![Image](https://github.com/user-attachments/assets/06412cf0-dfd2-4b82-aa90-01b43d6bbae1)
+;
 
 * {
     padding: 0;
